@@ -3704,7 +3704,7 @@ FRESULT f_open (
 #endif
 	DEF_NAMBUF
 
-#if defined(_DEBUG) && defined(__FLEXC__)
+#if defined(_DEBUG_FATFS) && defined(__FLEXC__)
 	  __builtin_printf("f_open(%s, 0x%x)\n", path, mode);
 #endif	
 	if (!fp) return FR_INVALID_OBJECT;
@@ -6865,7 +6865,7 @@ typedef struct fat_file {
 static int _set_dos_error(int derr)
 {
     int r;
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf("_set_dos_error(%d)\n", derr);
 #endif    
     switch (derr) {
@@ -6920,7 +6920,7 @@ static int v_creat(vfs_file_t *fil, const char *pathname, mode_t mode)
   memset(f, 0, sizeof(*f));
   fatmode = FA_CREATE_NEW | FA_WRITE | FA_READ;
   r = f_open(&f->fil, pathname, fatmode);
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
   __builtin_printf("v_create(%s) returned %d\n", pathname, r);
 #endif  
   if (r) {
@@ -6945,17 +6945,17 @@ static int v_opendir(DIR *dir, const char *name)
     FFDIR *f = malloc(sizeof(*f));
     int r;
 
-#ifdef _DEBUG    
+#ifdef _DEBUG_FATFS    
     __builtin_printf("v_opendir(%s)\n", name);
 #endif    
     if (!f) {
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
       __builtin_printf("malloc failed\n");
 #endif    
       return _seterror(ENOMEM);
     }
     r = f_opendir(f, name);
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf("f_opendir returned %d\n", r);
 #endif    
     
@@ -6983,7 +6983,7 @@ static int v_readdir(DIR *dir, struct dirent *ent)
     int r;
 
     r = f_readdir(dir->vfsdata, &finfo);
-#ifdef _DEBUG       
+#ifdef _DEBUG_FATFS       
     __builtin_printf("readdir fs_read: %d\n", r);
 #endif	
     if (r != 0) {
@@ -7020,7 +7020,7 @@ static int v_stat(const char *name, struct stat *buf)
     int r;
     FILINFO finfo;
     unsigned mode;
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf("v_stat(%s)\n", name);
 #endif
     memset(buf, 0, sizeof(*buf));
@@ -7047,7 +7047,7 @@ static int v_stat(const char *name, struct stat *buf)
     buf->st_blksize = 512;
     buf->st_blocks = buf->st_size / 512;
     buf->st_atime = buf->st_mtime = buf->st_ctime = unixtime(finfo.fdate, finfo.ftime);
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf("v_stat returning %d\n", r);
 #endif
     return r;
@@ -7062,11 +7062,11 @@ static ssize_t v_read(vfs_file_t *fil, void *buf, size_t siz)
     if (!f) {
         return _seterror(EBADF);
     }
-#ifdef _DEBUG    
+#ifdef _DEBUG_FATFS    
     __builtin_printf("v_read: fs_read of %u bytes:", siz);
 #endif    
     r = f_read(&f->fil, buf, siz, &x);
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf(" ...returned %d\n", r);
 #endif    
     if (r != 0) {
@@ -7086,11 +7086,11 @@ static ssize_t v_write(vfs_file_t *fil, void *buf, size_t siz)
     if (!f) {
         return _seterror(EBADF);
     }
-#ifdef _DEBUG    
+#ifdef _DEBUG_FATFS    
     __builtin_printf("v_write: f_write %d bytes:", siz);
 #endif    
     r = f_write(&f->fil, buf, siz, &x);
-#ifdef _DEBUG
+#ifdef _DEBUG_FATFS
     __builtin_printf("returned %d\n", r);
 #endif    
     if (r != 0) {
