@@ -2,7 +2,7 @@
 // simple test program for 9p access to host files
 //
 
-//#define _DEBUG
+//#define _DEBUG_9P
 
 #include <string.h>
 #include <stdlib.h>
@@ -88,7 +88,7 @@ int fs_init(sendrecv_func fn)
     unsigned s;
     unsigned tag;
 
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("fs9_init called\n");
 #endif    
     sendRecv = fn;
@@ -110,13 +110,13 @@ int fs_init(sendrecv_func fn)
 
     s = FETCH2(ptr+7);
     if (s != 6 || 0 != strncmp(&ptr[9], "9P2000", 6)) {
-#ifdef _DEBUG      
+#ifdef _DEBUG_9P      
         __builtin_printf("Bad version response from host: s=%d ver=%s\n", s, &ptr[9]);
 #endif	
         return -EIO;
     }
     if (msize < 64 || msize > MAXLEN) {
-#ifdef _DEBUG      
+#ifdef _DEBUG_9P      
         __builtin_printf("max message size %u is out of range\n", msize);
 #endif	
         return -1;
@@ -136,12 +136,12 @@ int fs_init(sendrecv_func fn)
     
     ptr = txbuf+4;
     if (ptr[0] != r_attach) {
-#ifdef _DEBUG      
+#ifdef _DEBUG_9P      
         __builtin_printf("fs9_init: Unable to attach\n");
 #endif	
         return -EINVAL;
     }
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("fs9_init OK\n");
 #endif    
     return 0;
@@ -219,7 +219,7 @@ int fs_open_relative(fs9_file *dir, fs9_file *f, const char *path, int fs_mode)
 
     r = fs_walk(dir, f, path);
     if (r != 0) {
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
       __builtin_printf("fs_open_relative: fs_walk returned %d\n", r);
 #endif      
       return r;
@@ -253,7 +253,7 @@ int fs_create(fs9_file *f, const char *path, uint32_t permissions)
     // first, walk to the directory containing our target file
     r = do_fs_walk(&rootdir, f, path, 1);
     if (r < 0) {
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
         __builtin_printf("do_fs_walk failed on [%s]\n", path);
 #endif	
         // directory not found
@@ -340,7 +340,7 @@ int fs_read(fs9_file *f, uint8_t *buf, int count)
     uint32_t oldlo;
     while (count > 0) {
 #ifdef _DEBUG
-        __builtin_printf("fs_read count=%d offset=%d\n", count, f->offlo);
+      __builtin_printf("fs_read count=%d offset=[%d:%d]\n", count, f->offlo, f->offhi);
 #endif        
         ptr = doPut4(txbuf, 0); // space for size
         ptr = doPut1(ptr, t_read);
@@ -392,6 +392,9 @@ int fs_read(fs9_file *f, uint8_t *buf, int count)
         totalread += r;
         count -= r;
         oldlo = f->offlo;
+#ifdef _DEBUG
+	__builtin_printf(" fs_read: oldlo=%d r=%d\n", oldlo, r);
+#endif	  
         f->offlo = oldlo + r;
         if (f->offlo < oldlo) {
             f->offhi++;
@@ -412,7 +415,7 @@ int fs_write(fs9_file *f, const uint8_t *buf, int count)
     int left;
     uint32_t oldlo;
     while (count > 0) {
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
         __builtin_printf("fs_write count=%d offset=%d\n", count, f->offlo);
 #endif        
         ptr = doPut4(txbuf, 0); // space for size
@@ -451,6 +454,9 @@ int fs_write(fs9_file *f, const uint8_t *buf, int count)
         oldlo = f->offlo;
         f->offlo = oldlo + r;
         if (f->offlo < oldlo) {
+#ifdef _DEBUG
+	    __builtin_printf("*** BUMPING offhi in fs_write\n");
+#endif	    
             f->offhi++;
         }
     }
@@ -533,7 +539,7 @@ static int v_creat(vfs_file_t *fil, const char *pathname, mode_t mode)
   }
   memset(f, 0, sizeof(*f));
   r = fs_create(f, pathname, mode);
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
   __builtin_printf("v_create(%s) returned %d\n", pathname, r);
 #endif  
   if (r) {
@@ -556,17 +562,17 @@ static int v_opendir(DIR *dir, const char *name)
     fs9_file *f = malloc(sizeof(*f));
     int r;
 
-#ifdef _DEBUG    
+#ifdef _DEBUG_9P    
     __builtin_printf("v_opendir(%s)\n", name);
 #endif    
     if (!f) {
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
       __builtin_printf("malloc failed\n");
 #endif    
       return _seterror(ENOMEM);
     }
     r = fs_open_relative(&rootdir, f, name, 0);
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("fs_open returned %d\n", r);
 #endif    
     
@@ -597,12 +603,12 @@ static int v_readdir(DIR *dir, struct dirent *ent)
     int r;
     uint16_t siz;
 
-#ifdef _DEBUG    
+#ifdef _DEBUG_9P    
     __builtin_printf("v_readdir()\n");
 #endif    
  again:
     if (bufdata > 0 && bufptr) {
-#ifdef _DEBUG      
+#ifdef _DEBUG_9P      
         __builtin_printf("v_readdir(bufdata=%d)\n", bufdata);
 #endif	
         siz = bufptr[0] + (bufptr[1]<<8); siz += 2;
@@ -622,13 +628,13 @@ static int v_readdir(DIR *dir, struct dirent *ent)
 	ent->d_name[siz] = 0;
 	bufptr = nextbufptr;
 
-#ifdef _DEBUG       
+#ifdef _DEBUG_9P       
 	__builtin_printf("readdir name: %s\n", ent->d_name);
 #endif	
 	return 0;
     }
     r = fs_read(dir->vfsdata, buf, sizeof(buf));
-#ifdef _DEBUG       
+#ifdef _DEBUG_9P       
     __builtin_printf("readdir fs_read: %d\n", r);
 #endif	
     if (r == 0) return -1; // EOF
@@ -642,7 +648,7 @@ static int v_readdir(DIR *dir, struct dirent *ent)
 static int v_stat(const char *name, struct stat *buf)
 {
     int r;
-#ifdef _DEBUG    
+#ifdef _DEBUG_9P    
     __builtin_printf("v_stat(%s)\n", name);
 #endif    
     r = fs_stat(&rootdir, name, buf);
@@ -657,7 +663,7 @@ static ssize_t v_read(vfs_file_t *fil, void *buf, size_t siz)
     if (!f) {
         return _seterror(EBADF);
     }
-#ifdef _DEBUG    
+#ifdef _DEBUG
     __builtin_printf("v_read: fs_read at %u:", f->offlo);
 #endif    
     r = fs_read(f, buf, siz);
@@ -681,11 +687,11 @@ static ssize_t v_write(vfs_file_t *fil, void *buf, size_t siz)
     if (!f) {
         return _seterror(EBADF);
     }
-#ifdef _DEBUG    
+#ifdef _DEBUG_9P    
     __builtin_printf("v_write: fs_write %d at %u:", siz, f->offlo);
 #endif    
     r = fs_write(f, buf, siz);
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("returned %d\n", r);
 #endif    
     if (r < 0) {
@@ -701,16 +707,18 @@ static off_t v_lseek(vfs_file_t *fil, off_t offset, int whence)
     if (!f) {
         return _seterror(EBADF);
     }
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("v_lseek(%d, %d) start=%d ", offset, whence, f->offlo);
 #endif    
     if (whence == SEEK_SET) {
         f->offlo = offset;
     } else if (whence == SEEK_CUR) {
         tmp = f->offlo + offset;
-        if (tmp < f->offlo) {
+        if (offset > 0 && tmp < f->offlo) {
             f->offhi++;
-        }
+        } else if (offset < 0 && tmp > f->offlo) {
+	    f->offhi--;
+	}
         f->offlo = tmp;
     } else {
         // SEEK_END; do a stat on the file and seek accordingly
@@ -722,7 +730,7 @@ static off_t v_lseek(vfs_file_t *fil, off_t offset, int whence)
 	f->offlo = stbuf.st_size - offset;
 	f->offhi = 0;
     }
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("end=%d\n", f->offlo);
 #endif    
     return f->offlo;
@@ -743,7 +751,7 @@ static int v_mkdir(const char *name, mode_t mode)
     }
     memset(f, 0, sizeof(*f));
     r = fs_create(f, name, mode | FS_MODE_DIR);
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
     __builtin_printf("v_mkdir(%s, %o) returned %d\n", name, mode, r);
 #endif
     free(f);
@@ -777,7 +785,7 @@ static int v_open(vfs_file_t *fil, const char *name, int flags)
   fs9_file *f = malloc(sizeof(*f));
   unsigned fs_flags;
 
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
   __builtin_printf("fs9 v_open\n");
 #endif  
   if (!f) {
@@ -788,18 +796,18 @@ static int v_open(vfs_file_t *fil, const char *name, int flags)
   if (flags & O_TRUNC) {
       fs_flags |= FS9_OTRUNC;
   }
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
   __builtin_printf("fs9: calling fs_open\n");
 #endif  
   r = fs_open(f, name, fs_flags);
   if (r) {
     free(f);
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
    __builtin_printf("fs_open(%s) returned error %d\n", name, r);
 #endif
     return _seterror(-r);
   }
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
   __builtin_printf("fs_open(%s) returned %d, offset=%d\n", name, r, f->offlo);
   __builtin_printf("offset at %d, size at %d\n", offsetof(fs9_file, offlo), sizeof(fs9_file));
   __builtin_printf("default buffer size=%d\n", sizeof(struct _default_buffer));
@@ -836,7 +844,7 @@ struct vfs *
 get_vfs()
 {
   struct vfs *v = &fs9_vfs;
-#ifdef _DEBUG
+#ifdef _DEBUG_9P
   __builtin_printf("get_vfs: returning %x\n", (unsigned)v);
 #endif  
   return v;
