@@ -78,5 +78,6 @@ typedef int (*getcfunc_t)(vfs_file_t *fil);
 #define _VFS_STATE_ERR (0x20)
 #define _VFS_STATE_APPEND (0x40)
 #define _VFS_STATE_NEEDSEEK (0x80)
+#define _VFS_STATE_ISATTY (0x100)
 
 #endif
